# atomese-simd

./: CMakeLists.txt  Design-A.md  Design-B.md  Design-C.md  Design-D.md  Design-E.md  Design-F.md  Design-G.md  Design.md  README.md
examples/: README.md  accumulator-bad.scm  accumulator.scm  atomese-kernel.scm  dot-product-bad.scm  vec-kernel.cl  vect-mult.scm
opencog/: CMakeLists.txt
opencog/atoms/: CMakeLists.txt
opencog/atoms/opencl/: CMakeLists.txt  Design.md  GenIDL.cc  GenIDL.h  OpenclDataValue.cc  OpenclDataValue.h  OpenclFloatStream.cc  OpenclFloatStream.h  OpenclFloatValue.cc  OpenclFloatValue.h  OpenclFloatVector.cc  OpenclFloatVector.h  OpenclJobValue.cc  OpenclJobValue.h  OpenclKernelLink.cc  OpenclKernelLink.h  OpenclKernelNode.cc  OpenclKernelNode.h  OpenclNode-cache.cc  OpenclNode.cc  OpenclNode.h  OpenclStream.cc  OpenclStream.h  OpenclValue.cc  OpenclValue.h  README.md  opencl-headers.h
opencog/atoms/opencl/opencl-types/: opencl_types_init.cc
opencog/atoms/opencl/scaffolding/: CMakeLists.txt  README.md  run-flow-vec.cc  run-hello-world.cc  run-vec-mult.cc  scaffolding.cc  scaffolding.h
opencog/atoms/opencl/stream/: CMakeLists.txt  OpenclFloatValue.cc  OpenclFloatValue.h
opencog/atoms/opencl/types/: CMakeLists.txt  opencl_types_init.cc
opencog/cuda/: CMakeLists.txt
opencog/cuda/scaffolding/: CMakeLists.txt  README.md  cuda-hello.cu
opencog/opencl/: CMakeLists.txt  opencl.scm
opencog/opencl/atomspace/: .gitignore  gpu-cosine.cl  test-atomspace.c  test-cosine.c  test-counting.c  test-hashtable.c  test-mi.c  test-sections.c  test-substitute.c
opencog/opencl/opencl-types/: CMakeLists.txt
opencog/opencl/scaffolding/: CMakeLists.txt  run-flow-vec.cc  run-hello-world.cc  run-vec-accum.cc  run-vec-mult.cc  scaffolding.cc  scaffolding.h  vec-mult.cl
opencog/opencl/types/: CMakeLists.txt  opencl_types.script  opencl_types_init.cc
tests/: CMakeLists.txt
tests/opencl/: CMakeLists.txt  GenIDLUTest.cxxtest  opencl-vec-test.scm  vec-kernel.cl
